# defiant-core

./: DEPS  brave_paks.gni  package.json
app/: bookmarks_strings.grdp  brave_exe.ver  brave_generated_resources.grd  brave_strings.grd  extensions_strings.grdp  file_manager_strings.grdp  generated_resources.grd  media_router_strings.grdp  nux_strings.grdp  os_settings_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  shared_settings_strings.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  welcome_strings.grdp  xr_consent_ui_strings.grdp
common/: brave_paths.cc  url_constants.cc  url_constants.h
components/: autofill_assistant_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  components_brave_strings.grd  components_strings.grd  error_page_strings.grdp  find_in_page_strings.grdp  flags_strings.grdp  history_strings.grdp  management_strings.grdp  new_or_sad_tab_strings.grdp  ntp_snippets_strings.grdp  ntp_tiles_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  payments_strings.grdp  permissions_strings.grdp  policy_strings.grdp  reset_password_strings.grdp  security_interstitials_strings.grdp  security_state_strings.grdp  ssl_errors_strings.grdp  sync_ui_strings.grdp  translate_strings.grdp
components/fulldive_extension/: BUILD.gn
components/fulldive_extension/extension/: resources.grd
components/fulldive_extension/extension/fulldive_extension/: BUILD.gn  app.js  manifest.json  vendor.js
components/fulldive_extension/extension/fulldive_extension/bg/: bundle.js
components/fulldive_extension/extension/fulldive_extension/content/: bundle.js  styles.css
components/fulldive_extension/extension/fulldive_extension/vendors/: bundle.js
patches/: build-mac-find_sdk.py.patch  chrome-browser-resources-settings-about_page-about_page.js.patch  chrome-installer-gcapi-google_update_util.cc.patch  chrome-installer-launcher_support-chrome_launcher_support.cc.patch  chrome-installer-mini_installer-BUILD.gn.patch  chrome-installer-mini_installer-chrome.release.patch  chrome-installer-util-google_update_constants.cc.patch  chrome-installer-util-google_update_settings.cc.patch  chrome-installer-util-util_constants.cc.patch  components-os_crypt-key_storage_kwallet_unittest.cc.patch  components-os_crypt-key_storage_linux.cc.patch  (+1 more)
script/: create-signed-installer.py  (+2 more)
(+606 files in other folders)
